fix(#59): 리뷰 피드백 반영 - 코드 개선 및 성능 최적화
- CreateCategoryService: 부모 카테고리도 함께 저장하여 JPA 관계 일관성 보장
- UpdateCategoryService: 카테고리 비활성화 로직 개선 (hasActiveProducts 설정)
- GetCategoryTreeService: N+1 쿼리 문제 해결 (findAll() 사용으로 최적화)
- AssignProductToCategoryService: 서비스 레벨 중복 검증 제거
- CreateCategoryService/UpdateCategoryService: 중복 유효성 검사 제거 (도메인 레벨로 이동)
- Category 도메인: sortOrder 유효성 검사 로직 추가
- 테스트 코드: 변경사항에 맞춰 모든 테스트 업데이트

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>